<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, JayonMobileActivity!</string>
    <string name="app_name">JayonMobile</string>
    <string name="api_url">http://50.31.253.7/jayonadmin/api/v1/</string>
    <string name="api_get_data">syncdata/</string>
    <string name="api_get_key">mobkey/</string>
    <string name="api_put_data">syncdata/</string>
    <string name="api_put_log">syncreport/</string>
    <string name="api_put_loc">locpost/</string>
    <string name="api_put_status">statpost/</string>
    <string name="api_upload_pic">uploadpic/</string>
    <string name="api_key">3781b5d3de50580c414cb313797bf8b1ad236518</string>
    <string name="master_key">7e931g6628S59A0sJ4pYVqAjdo0v66Wb</string>
    <string name="pass_key">98765</string>
    <string name="dev_identifier">JY-DEV</string>
    <string name="noteField">Note</string>
    <string name="delivery_id">Delivery ID</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="merchant">Merchant</string>
    <string name="buyer">Pembeli</string>
    <string name="recipient">Penerima</string>
    <string name="shipping">Kirim Ke</string>
    <string name="phone">Telepon</string>
    <string name="cost">Cost</string>
    <string name="cod_cost">COD Surcharge</string>
    <string name="delivery_cost">Ongkos Kirim</string>
    <string name="total_value">Nilai Paket</string>
    <string name="total_charge">Total Tagihan</string>
    <string name="delivery_status">Status</string>
    <string name="delivered">Delivered</string>
    <string name="pickedup">Picked Up</string>
    <string name="pending">Pending</string>
    <string name="noshow">No Show</string>
    <string name="enroute">OTW</string>
    <string name="revoked">Rejected</string>
    <string name="rescheduled">Rescheduled</string>
    <string name="takepic">Take Picture</string>
    <string name="getdirection">Get Direction</string>
    <string name="currentloc">Current Location</string>
    <string name="orderdetail">Order Detail</string>
    <string name="getloc">Get Position</string>
    <string name="scancode">Scan QR</string>
    <string name="ready">Ready</string>
    <string name="recieverphoto">Receiver Photo</string>
    <string name="uploadpic">Upload</string>
    <string name="uploadtitle">Photo Upload</string>
    <string name="uploadconfirm">Upload Now ?</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_delivery_detail">DeliveryDetailActivity</string>
    <string name="myloc">My Position</string>
    <string name="reportloc">Report Position</string>
    <string name="satview">Sat View</string>
    <string name="usegps">Use GPS</string>
    <string name="notnow">Not Now</string>
    <string name="deviceinfo">Device Info</string>
    <string name="dirtitle">Direction</string>
    <string name="autosetting">Auto Report Setting</string>
    <string name="autocancel">Cancel on Exit</string>
    <string name="autointerval">Interval in Second</string>
    <string name="savesetting">Save Setting</string>
    <string name="departed">Courier Dispatch</string>
    <string name="returned">Courier Return</string>
    <string name="syncin">Download Order</string>
    <string name="syncout">Upload Report</string>
    <string name="syncpic">Upload Photos</string>
    <string name="syncnote">Upload Note</string>
    <string name="reqdevkey">Request Device Key</string>
    <string name="changepass">Change Passkey</string>
    <string name="lockopt">Lock Option</string>
    <string name="adminname">Administrator Username</string>
    <string name="adminpass">Administrator Password</string>
    <string name="devidentifier">Device Identifier</string>
    <string name="title_activity_auto_setting">Auto Report Setting</string>
    <string name="title_activity_route_list">Route</string>
    <string name="action_settings">Settings</string>
    <string name="ordercountlabel">Jumlah Paket</string>
    <string name="title_activity_signature">Tanda Tangan</string>
    <string name="labelsignature">Tanda Tangan</string>
    <string name="clearsignature">Ulang</string>
    <string name="cancelsignature">Batal</string>
    <string name="commitsignature">Simpan</string>
    <string name="unknownlocation">Mencari lokasi GPS</string>
        

</resources>